# OC_P2

./: Analyse des 50 Images du modèle.docx  IoU calculé par classe.docx  Jonathan Desurmont_Mode_Trend.pptx  TEST.gitignore  confusion_matrix.csv  pyproject.toml
src/projet2/: 20 images dans une fenêtre de 2 avec nouveau label.py  20 images en fenetre de 2.py  50 images avec label et 3 sorties.py  50 images avec label.py  Final.py  IOU Compute.py  Main 1 image.py  Main 50 images HTTP Robuste.py  Main 50 images.py  Main.py  Matrice de confusion.py  final_jupyter.ipynb
